--- a/src/public/scss/partials/_placeholders.scss
+++ b/src/public/scss/partials/_placeholders.scss
@@ -12,10 +12,10 @@
 .placeholder-text { 
 
     width: 80%;
-    padding-right: rem-calc(10);
-    padding-left: rem-calc(10); 
-  height: 40%;
-  overflow: auto;
+    padding-right: rem-calc(5);
+    padding-left: rem-calc(5); 
+  height: 50%;
+  overflow: hidden;
   margin: auto;
   position: absolute;
   top: 0; left: 0; bottom: 0; right: 0;
